--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   
     <section class="meta-inside">
       <div class="title-text">
-        <h1 class="title">Thomas Moura</h1>
+        <h1 class="title">Thomas A. Moura</h1>
         <h2 class="subtitle">Web <span class="pro">Dev</span>eloper.</h2>
       </div>   
     </section>
